5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2443.log
== SUBMITION (2019-04-16 13:03:09) 
-- CODE:
from math import*

rt = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (2) ou volume do combustivel (3)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 21):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.269587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:03:11) 
-- CODE:
from math import*

rt = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (2) ou volume do combustivel (3)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 21):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.164943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:03:18) 
-- CODE:
from math import*

rt = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (2) ou volume do combustivel (3)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 2):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.177797
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:03:19) 
-- CODE:
from math import*

rt = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (2) ou volume do combustivel (3)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 2):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:05:27) 
-- CODE:
from math import*

rt = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.139798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:05:29) 
-- CODE:
from math import*

rt = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:44:11) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.186944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:44:12) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:44:12) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
alturac = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    calota = pi/3 * x**2*(3 * raio - x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:49:13) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
altura = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * altura**2*(3 * raio - altura)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.03141
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:49:14) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
altura = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * altura**2*(3 * raio - altura)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.0329781
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:49:15) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
altura = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * altura**2*(3 * raio - altura)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:49:56) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:49:58) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.0323379
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:49:58) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.0322471
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:49:59) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:00) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:06) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:07) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:07) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:58) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura da coluna:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:52:57) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura de x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:52:57) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura de x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:52:57) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura de x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:52:58) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura de x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.035203
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:52:58) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura de x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.0327229
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:52:58) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura de x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.030303
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:55:08) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura do ar em x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:55:09) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura do ar em x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:55:10) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura do ar em x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.033519
-- ERROR:
Error response from daemon: Container 413c2b29af582be5bc764c3ce5f29dc42adbc301610e0c39e27c47dd70f10f6a is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:56:15) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura do ar em x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:56:24) 
-- CODE:
from math import*

raio = float(input("valor do raio:"))
x = float(input("altura do ar em x:"))

opcao = int(input("volume do ar (1) ou volume do combustivel (2)"))
calota = pi/3 * x**2*(3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota
print(round(volume, 4))
-- EXECUTION TIME:
0.128679
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
